--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Slick Slider -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <!-- style CSS -->
     <link rel="stylesheet" href="style.CSS" />
   </head>
@@ -184,32 +184,34 @@
         </div>
       </section>
       <section class="sec-2 section">
-        <div class="bg-container">
-          <img src="Image_file/main-images/sec-2/sec-2-background-img.png" alt="sec-2-background-img" />
-        </div>
-        <div class="sec-2-text-box">
-          <h3 class="sec2-text t1">
-            변화와 혁신으로
-            <br />
-            인류의 건강을 지키고
-          </h3>
-          <h3 class="sec2-text t2">
-            첨단 생산기술로
-            <br />
-            의료기기 국산화에 앞장서며
-          </h3>
-          <h3 class="sec2-text t3">
-            한발 앞선 경쟁력으로
-            <br />
-            신약 개발을 선도하는 혁신 기업
-          </h3>
-          <h3 class="sec2-text t4">
-            고객의 건강한 내일을
-            <br />
-            약속합니다.
-          </h3>
-          <div class="sec2-text t5">
-            <img src="Image_file/main-images/sec-2/sec-2-logo.png" alt="slogun-logo" />
+        <div class="content-wrap">
+          <div class="bg-container">
+            <img src="Image_file/main-images/sec-2/sec-2-background-img.png" alt="sec-2-background-img" />
+          </div>
+          <div class="sec-2-text-box">
+            <h3 class="sec2-text t1">
+              변화와 혁신으로
+              <br />
+              인류의 건강을 지키고
+            </h3>
+            <h3 class="sec2-text t2">
+              첨단 생산기술로
+              <br />
+              의료기기 국산화에 앞장서며
+            </h3>
+            <h3 class="sec2-text t3">
+              한발 앞선 경쟁력으로
+              <br />
+              신약 개발을 선도하는 혁신 기업
+            </h3>
+            <h3 class="sec2-text t4">
+              고객의 건강한 내일을
+              <br />
+              약속합니다.
+            </h3>
+            <div class="sec2-text t5">
+              <img src="Image_file/main-images/sec-2/sec-2-logo.png" alt="slogun-logo" />
+            </div>
           </div>
         </div>
       </section>
@@ -289,7 +291,7 @@
       </section>
       <section class="sec-5 section">
         <div class="bg-container">
-          <img src="Image_file/main-images/sec-5/sec-5-background-img.png" alt="sec-5-background-img">
+          <img src="Image_file/main-images/sec-5/sec-5-background-img.png" alt="sec-5-background-img" />
         </div>
         <div class="text-container">
           <div class="top-box">
@@ -297,7 +299,7 @@
             <h4>ESG 사회공헌</h4>
             <span>
               환경문제를 개선해 지속가능한 사회를 만드는데 기여
-              <br>
+              <br />
               긍정적인 영향을 끼치기 위해 다양한 사회공헌 활동을 진행
             </span>
           </div>
@@ -307,12 +309,10 @@
                 <span>환경적 지속가능성</span>
                 <span>(Environmental)</span>
               </div>
-              <div class="center-box">
-                JW는 사업영위 과정에서 발생할 수 있는 환경문제 개선을 위해 노력합니다
-              </div>
+              <div class="center-box">JW는 사업영위 과정에서 발생할 수 있는 환경문제 개선을 위해 노력합니다</div>
               <div class="right-box">
                 <a href="#" onclick="return false">
-                  <img src="Image_file/main-images/sec-5/arrow-img.png" alt="arrow-img">
+                  <img src="Image_file/main-images/sec-5/arrow-img.png" alt="arrow-img" />
                 </a>
               </div>
             </div>
@@ -321,12 +321,10 @@
                 <span>사회적 지속가능성</span>
                 <span>(Social)</span>
               </div>
-              <div class="center-box">
-                JW는 사회적 책임을 다하고 이해관계자들에게 긍정적인 영향을 약속합니다
-              </div>
+              <div class="center-box">JW는 사회적 책임을 다하고 이해관계자들에게 긍정적인 영향을 약속합니다</div>
               <div class="right-box">
                 <a href="#" onclick="return false">
-                  <img src="Image_file/main-images/sec-5/arrow-img.png" alt="arrow-img">
+                  <img src="Image_file/main-images/sec-5/arrow-img.png" alt="arrow-img" />
                 </a>
               </div>
             </div>
@@ -335,12 +333,10 @@
                 <span>지배구조 공시</span>
                 <span>(Governance)</span>
               </div>
-              <div class="center-box">
-                JW는 투명하고 공정한 지배구조로 경제 순환에 이바지하기 위해 최선을 다합니다
-              </div>
+              <div class="center-box">JW는 투명하고 공정한 지배구조로 경제 순환에 이바지하기 위해 최선을 다합니다</div>
               <div class="right-box">
                 <a href="#" onclick="return false">
-                  <img src="Image_file/main-images/sec-5/arrow-img.png" alt="arrow-img">
+                  <img src="Image_file/main-images/sec-5/arrow-img.png" alt="arrow-img" />
                 </a>
               </div>
             </div>
@@ -374,58 +370,58 @@
             <span># 카테고리 검색</span>
             <div class="category-box" onclick="return false">
               <div class="split-box split-box-1">
-               <div class="categories"><a href="#">일반의약품</a></div>
-               <div class="categories"><a href="#">전문의약품</a></div>
-               <div class="categories"><a href="#">의약외품</a></div>
-               <div class="categories"><a href="#">의료기기</a></div>
-               <div class="categories"><a href="#">건강기능식품</a></div>
-               <div class="categories"><a href="#">심전계</a></div>
+                <div class="categories"><a href="#">일반의약품</a></div>
+                <div class="categories"><a href="#">전문의약품</a></div>
+                <div class="categories"><a href="#">의약외품</a></div>
+                <div class="categories"><a href="#">의료기기</a></div>
+                <div class="categories"><a href="#">건강기능식품</a></div>
+                <div class="categories"><a href="#">심전계</a></div>
               </div>
               <div class="split-box split-box-2">
-               <div class="categories"><a href="#">수술관련기기</a></div>
-               <div class="categories"><a href="#">멸균기</a></div>
-               <div class="categories"><a href="#">산부인과</a></div>
-               <div class="categories"><a href="#">유아케어</a></div>
-               <div class="categories"><a href="#">폐활량계</a></div>
-               <div class="categories"><a href="#">기타</a></div>
-               </div>
+                <div class="categories"><a href="#">수술관련기기</a></div>
+                <div class="categories"><a href="#">멸균기</a></div>
+                <div class="categories"><a href="#">산부인과</a></div>
+                <div class="categories"><a href="#">유아케어</a></div>
+                <div class="categories"><a href="#">폐활량계</a></div>
+                <div class="categories"><a href="#">기타</a></div>
+              </div>
             </div>
           </div>
-          <div class="search-box">
-            <span>검색</span>
-            <a href="#" onclick="return false">
+          <div class="search-wrap">
+            <input id="search" class="search-input" type="text" placeholder="검색어를 입력해주세요." aria-label="검색어 입력" />
+            <button id="btnSearch" class="search-button" type="button">
               <img src="Image_file/main-images/sec-6/search-img.png" alt="search-img" />
-            </a>
+            </button>
           </div>
         </div>
-     <div class="goods-slider">
-  <div class="goods-box">
-    <span>일반의약품</span>
-    <span>덴디돌(정)</span>
-    <a href="#" onclick="return false">
-      <img src="Image_file/main-images/sec-6/goods-1.png" />
-    </a>
-    <span>뼈와 치아 형성에 필요</span>
-  </div>
+        <div class="goods-slider">
+          <div class="goods-box">
+            <span>일반의약품</span>
+            <span>덴디돌(정)</span>
+            <a href="#" onclick="return false">
+              <img src="Image_file/main-images/sec-6/goods-1.png" />
+            </a>
+            <span>뼈와 치아 형성에 필요</span>
+          </div>
 
-  <div class="goods-box">
-    <span>일반의약품</span>
-    <span>비타민D3(정)</span>
-    <a href="#" onclick="return false">
-      <img src="Image_file/main-images/sec-6/goods-2.png" />
-    </a>
-    <span>비타민 보충에 필요</span>
-  </div>
+          <div class="goods-box">
+            <span>일반의약품</span>
+            <span>비타민D3(정)</span>
+            <a href="#" onclick="return false">
+              <img src="Image_file/main-images/sec-6/goods-2.png" />
+            </a>
+            <span>비타민 보충에 필요</span>
+          </div>
 
-  <div class="goods-box">
-    <span>일반의약품</span>
-    <span>프렌즈 아이드롭</span>
-    <a href="#" onclick="return false">
-      <img src="Image_file/main-images/sec-6/goods-3.png" />
-    </a>
-    <span>안구건조에 필요</span>
-  </div>
-</div>
+          <div class="goods-box">
+            <span>일반의약품</span>
+            <span>프렌즈 아이드롭</span>
+            <a href="#" onclick="return false">
+              <img src="Image_file/main-images/sec-6/goods-3.png" />
+            </a>
+            <span>안구건조에 필요</span>
+          </div>
+        </div>
       </section>
       <section class="sec-7 section">
         <div class="top-box">
@@ -433,61 +429,61 @@
           <h4>뉴스룸</h4>
           <span>
             우수한 R&D 기술력으로 인류의 건강문화를 선도하는
-            <br>
+            <br />
             중외제약의 소식을 가장 먼저 알려드립니다
           </span>
-           <span><a href="#" onclick="return false">VIEW MORE</a></span>
+          <span><a href="#" onclick="return false">VIEW MORE</a></span>
         </div>
         <div class="marquee-wrapper">
-  <div class="marquee-box">
-    <div class="news-pages news-page-1">
-      <div class="img-container">
-        <img src="Image_file/main-images/sec-7/news-image-1.png" alt="news-image-1">
-      </div>
-      <div class="text-container">
-        <div class="text-top">
-          JW메디칼, 글로벌 파트너십으로 영상진단장비
-          <br>국내 시장 공략
+          <div class="marquee-box">
+            <div class="news-pages news-page-1">
+              <div class="img-container">
+                <img src="Image_file/main-images/sec-7/news-image-1.png" alt="news-image-1" />
+              </div>
+              <div class="text-container">
+                <div class="text-top">
+                  JW메디칼, 글로벌 파트너십으로 영상진단장비
+                  <br />국내 시장 공략
+                </div>
+                <div class="text-bottom">2025-02-23</div>
+              </div>
+            </div>
+            <div class="news-pages news-page-2">
+              <div class="img-container">
+                <img src="Image_file/main-images/sec-7/news-image-2.png" alt="news-image-2" />
+              </div>
+              <div class="text-container">
+                <div class="text-top">
+                  JW중외제약, 자궁근종 치료제 License-in
+                  <br />계약 체결 ••• 오리지널 포트폴리오 확대
+                </div>
+                <div class="text-bottom">2024-06-28</div>
+              </div>
+            </div>
+            <div class="news-pages news-page-3">
+              <div class="img-container">
+                <img src="Image_file/main-images/sec-7/news-image-3.png" alt="news-image-3" />
+              </div>
+              <div class="text-container">
+                <div class="text-top">
+                  JW중외제약, 글로벌 학회서 혁신신약 연구결과
+                  <br />
+                  관심 집중
+                </div>
+                <div class="text-bottom">2024-05-31</div>
+              </div>
+            </div>
+            <div class="news-pages news-page-4">
+              <div class="img-container">
+                <img src="Image_file/main-images/sec-7/news-image-4.png" alt="news-image-4" />
+              </div>
+              <div class="text-container">
+                <div class="text-top">문형표 보건복지부장관, JW당진생산단지 방문</div>
+                <div class="text-bottom">2015-02-23</div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="text-bottom">2025-02-23</div>
-      </div>
-    </div>
-    <div class="news-pages news-page-2">
-      <div class="img-container">
-        <img src="Image_file/main-images/sec-7/news-image-2.png" alt="news-image-2">
-      </div>
-      <div class="text-container">
-        <div class="text-top">
-          JW중외제약, 자궁근종 치료제 License-in
-          <br>계약 체결 ••• 오리지널 포트폴리오 확대
-        </div>
-        <div class="text-bottom">2024-06-28</div>
-      </div>
-    </div>
-    <div class="news-pages news-page-3">
-      <div class="img-container">
-        <img src="Image_file/main-images/sec-7/news-image-3.png" alt="news-image-3">
-      </div>
-      <div class="text-container">
-        <div class="text-top">
-          JW중외제약, 글로벌 학회서 혁신신약 연구결과
-          <br>
-           관심 집중
-        </div>
-        <div class="text-bottom">2024-05-31</div>
-      </div>
-    </div>
-    <div class="news-pages news-page-4">
-      <div class="img-container">
-        <img src="Image_file/main-images/sec-7/news-image-4.png" alt="news-image-4">
-      </div>
-      <div class="text-container">
-        <div class="text-top">문형표 보건복지부장관, JW당진생산단지 방문</div>
-        <div class="text-bottom">2015-02-23</div>
-      </div>
-    </div>
-  </div>
-</div> 
       </section>
       <div class="banner">
         <div class="banner-wrapper">
@@ -500,7 +496,7 @@
       </div>
       <section class="sec-8 section">
         <div class="img-container">
-          <img src="Image_file/main-images/sec-8/contact-back-img.png" alt="contact-back-img">
+          <img src="Image_file/main-images/sec-8/contact-back-img.png" alt="contact-back-img" />
         </div>
         <div class="text-container">
           <span>Contact Us</span>
@@ -508,10 +504,10 @@
           <span>중외제약은 고객님의 목소리에 항상 귀 기울이겠습니다</span>
           <div class="contact-box">
             <a class="arrow-wrapper" href="#" onclick="return false">
-              <img src="Image_file/main-images/sec-8/arrow-black.png" alt="arrow-black">
+              <img src="Image_file/main-images/sec-8/arrow-black.png" alt="arrow-black" />
             </a>
             <div class="logo-wrapper">
-              <img src="Image_file/main-images/sec-8/JW-logo-black.png" alt="JW-logo-black">
+              <img src="Image_file/main-images/sec-8/JW-logo-black.png" alt="JW-logo-black" />
             </div>
           </div>
         </div>
