--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.CSS" />
   </head>
   <body>
-    <a href="#" class="top-btn" onclick="screenTop"><span>TOP</span></a>
+    <a href="#" class="top-btn"><span>TOP</span></a>
     <header>
       <div class="hd-container">
         <div class="hd-logo-box">
@@ -28,7 +28,9 @@
         </div>
         <nav class="menu-box">
           <ul onclick="return false">
-            <div class="bg-container"></div>
+            <li class="bg-container-wrapper">
+              <div class="bg-container"></div>
+            </li>
             <li>
               <a href="#">기업</a>
             </li>
@@ -142,7 +144,7 @@
             </div>
           </div>
           <div class="tab-box">
-            <a href="#">
+            <a href="#" onclick="return false">
               <img src="Image_file/header-imgs/tab-menu-icon.png" alt="tab-box" />
             </a>
           </div>
@@ -275,44 +277,44 @@
         <div class="bottom-box">
           <a href="#" class="circles circle-1" onclick="return false">
             <div class="flip-card">
-            <div class="flip-card-front">
-              <span>합성 신약</span>
-              <span>(Small Molecule)</span>
-            </div>
-            <div class="flip-card-back">
-              <p>혁신적 기전 기반의 항암•면역•대사•재생 치료제 개발</p>
-              <p>바이오마커 기반 정밀 신약과 첨단 빅데이터 플랫폼 구축</p>
-              <p>오픈 이노베이션을 통한 신규 모달리티 확장과</p>
-              <p>글로벌 경쟁력 강화</p>
-            </div>
+              <div class="flip-card-front">
+                <span>합성 신약</span>
+                <span>(Small Molecule)</span>
+              </div>
+              <div class="flip-card-back">
+                <p>혁신적 기전 기반의 항암•면역•대사•재생 치료제 개발</p>
+                <p>바이오마커 기반 정밀 신약과 첨단 빅데이터 플랫폼 구축</p>
+                <p>오픈 이노베이션을 통한 신규 모달리티 확장과</p>
+                <p>글로벌 경쟁력 강화</p>
+              </div>
             </div>
           </a>
           <a href="#" class="circles circle-2" onclick="return false">
             <div class="flip-card">
-            <div class="flip-card-front">
-              <span>개량 신약</span>
-              <span>(IMD)</span>
-            </div>
-            <div class="flip-card-back">
-              <p>서방성 및 자가유화 약물전달(SMEDDS) 기술을 통한</p>
-              <p>약물 효능 극대화 Multi-layer·Multi-filling 복합 제제와</p>
-              <p>흡수 부위별 방출 제어 기술 적용</p>
-              <p>약물 상호작용을 최소화한 최적 복합제 개발</p>
-            </div>
+              <div class="flip-card-front">
+                <span>개량 신약</span>
+                <span>(IMD)</span>
+              </div>
+              <div class="flip-card-back">
+                <p>서방성 및 자가유화 약물전달(SMEDDS) 기술을 통한</p>
+                <p>약물 효능 극대화 Multi-layer·Multi-filling 복합 제제와</p>
+                <p>흡수 부위별 방출 제어 기술 적용</p>
+                <p>약물 상호작용을 최소화한 최적 복합제 개발</p>
+              </div>
             </div>
           </a>
           <a href="#" class="circles circle-3" onclick="return false">
             <div class="flip-card">
-            <div class="flip-card-front">
-              <span>원료의약품</span>
-              <span>(API)</span>
-            </div>
-            <div class="flip-card-back">
-              <p>High potency drug(펩타이드·스테로이드) 제조기술</p>
-              <p>보유, 고순도 정제·연속흐름반응 등 고부가가치 신기술 적용</p>
-              <p>AI 기반 신속·최적화 연구 플랫폼을 통한</p>
-              <p>혁신적 신약개발 가속화</p>
-            </div>
+              <div class="flip-card-front">
+                <span>원료의약품</span>
+                <span>(API)</span>
+              </div>
+              <div class="flip-card-back">
+                <p>High potency drug(펩타이드·스테로이드) 제조기술</p>
+                <p>보유, 고순도 정제·연속흐름반응 등 고부가가치 신기술 적용</p>
+                <p>AI 기반 신속·최적화 연구 플랫폼을 통한</p>
+                <p>혁신적 신약개발 가속화</p>
+              </div>
             </div>
           </a>
         </div>
