99% real real finish

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
         </div>
         <div class="text-container">
           <h1>
-            <span data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">열정과 혁신,</span>
-            <span data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">경험과 기술력이 만나</span>
-            <span data-aos="fade-right" data-aos-duration="1000" data-aos-delay="600">신약의 새로운 내일을 그리다.</span>
+            <span data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200" data-aos-offset="-1000">열정과 혁신,</span>
+            <span data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400" data-aos-offset="-1000">경험과 기술력이 만나</span>
+            <span data-aos="fade-right" data-aos-duration="1000" data-aos-delay="600" data-aos-offset="-1000">신약의 새로운 내일을 그리다.</span>
           </h1>
           <div class="text-en" data-aos-once="true" data-aos-offset="-1000" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="800">
             <img src="Image_file/main-images/sec-1/text-en-arrow.png" alt="right-arrow" />
@@ -632,10 +632,10 @@
               <span class="copy-box">Copyright ⓒ JW중외제약 All rights reserved</span>
             </div>
             <div class="ft-bottom-marks">
-              <div class="mark-1">
+              <div class="mark-1 mark">
                 <img src="Image_file/footer-images/authentication mark-1.png" alt="authentication mark-1" />
               </div>
-              <div class="mark-2">
+              <div class="mark-2 mark">
                 <img src="Image_file/footer-images/authentication mark-2.png" alt="authentication mark-2" />
               </div>
             </div>
