--- a/index.html
+++ b/index.html
@@ -677,19 +677,19 @@
               <span class="name-box">대표자명 : 선영섭</span>
               <div class="address-box">
                 <span>경기도 과천시 과천대로 7길 38 (길현동) JW사옥</span>
-                <span id="between-liner"></span>
+                <span class="between-liner"></span>
                 <span>대표번호 : 02-840-6777</span>
-                <span id="between-liner"></span>
+                <span class="between-liner"></span>
                 <span>제품상담 : 1588-2675</span>
               </div>
               <span class="copy-box">Copyright ⓒ JW중외제약 All rights reserved</span>
             </div>
             <div class="ft-bottom-marks">
               <div class="mark-1 mark">
-                <img src="Image_file/footer-images/authentication mark-1.png" alt="authentication mark-1" />
+                <img src="Image_file/footer-images/authentication-mark-1.png" alt="authentication-mark-1" />
               </div>
               <div class="mark-2 mark">
-                <img src="Image_file/footer-images/authentication mark-2.png" alt="authentication mark-2" />
+                <img src="Image_file/footer-images/authentication-mark-2.png" alt="authentication-mark-2" />
               </div>
             </div>
           </div>
