--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <img src="Image_file/btn-images/close-btn.png" alt="close-btn" />
           </div>
         </div>
-        <nav class="aside-menu-box">
+        <div class="aside-menu-box">
           <ul onclick="return false">
             <li class="menu-item-initial">
               <span>기업</span>
@@ -288,7 +288,7 @@
               </ul>
             </li>
           </ul>
-        </nav>
+        </div>
       </aside>
       <section class="sec-1 section">
         <div class="swiper mySwiper">
@@ -369,6 +369,23 @@
               />
             </button>
             <span class="total">03</span>
+          </div>
+        </div>
+      </section>
+      <section class="sec-responsive">
+        <div class="content-wrap">
+          <div class="bg-container">
+            <img
+              src="Image_file/main-images/sec-2/sec-2-background-img.png"
+              alt="sec-2-background-img"
+            />
+          </div>
+          <div class="text-box">
+            <h3 class="sec-responsive-text">
+              중외제약은 고객님들의
+              <br />
+              건강한 내일을 약속합니다
+            </h3>
           </div>
         </div>
       </section>
