--- a/index.html
+++ b/index.html
@@ -689,77 +689,87 @@
             </button>
           </div>
         </div>
-        <div class="goods-slider">
-          <div class="goods-box">
-            <span>건강기능식품</span>
-            <span>덴디돌(정)</span>
-            <a href="#" onclick="return false">
-              <img
-                src="Image_file/main-images/sec-6/goods-1.png"
-                alt="goods-img"
-              />
-            </a>
-            <span>
-              뼈의 형성과 유지에 필요,
-              <br />
-              골다공증발생 위험 감소에 효과적</span
-            >
-          </div>
+        <div class="goods-slider swiper">
+          <div class="swiper-wrapper">
+            <div class="goods-box swiper-slide">
+              <span>건강기능식품</span>
+              <span>덴디돌(정)</span>
+              <a href="#" onclick="return false">
+                <img
+                  src="Image_file/main-images/sec-6/goods-1.png"
+                  alt="goods-img"
+                />
+              </a>
+              <span>
+                뼈의 형성과 유지에 필요
+                <br />
+                골다공증발생 위험이 효과적으로 감소</span
+              >
+            </div>
 
-          <div class="goods-box">
-            <span>일반의약품</span>
-            <span>비타민D3(정)</span>
-            <a href="#" onclick="return false">
-              <img
-                src="Image_file/main-images/sec-6/goods-2.png"
-                alt="goods-img"
-              />
-            </a>
-            <span
-              >칼슘과 인이 흡수되고 이용되는데 필요,
-              <br />
-              골다공증발생 위험 감소에 효과적</span
-            >
-          </div>
+            <div class="goods-box swiper-slide">
+              <span>일반의약품</span>
+              <span>비타민D3(정)</span>
+              <a href="#" onclick="return false">
+                <img
+                  src="Image_file/main-images/sec-6/goods-2.png"
+                  alt="goods-img"
+                />
+              </a>
+              <span
+                >칼슘과 인의 흡수를 도와
+                <br />
+                골다공증발생 위험이 효과적으로 감소</span
+              >
+            </div>
 
-          <div class="goods-box">
-            <span>일반의약품</span>
-            <span>프렌즈 아이드롭</span>
-            <a href="#" onclick="return false">
-              <img
-                src="Image_file/main-images/sec-6/goods-3.png"
-                alt="goods-img"
-              />
-            </a>
-            <span>눈물 보충(눈의 건조), 눈의피로, 눈의 흐림 개선</span>
-          </div>
+            <div class="goods-box swiper-slide">
+              <span>일반의약품</span>
+              <span>프렌즈 아이드롭</span>
+              <a href="#" onclick="return false">
+                <img
+                  src="Image_file/main-images/sec-6/goods-3.png"
+                  alt="goods-img"
+                />
+              </a>
+              <span
+                >눈물 보충으로
+                <br />
+                눈의 건조, 눈의피로, 눈의 흐림 등을 개선</span
+              >
+            </div>
 
-          <div class="goods-box">
-            <span>일반의약품</span>
-            <span>투비원(정)</span>
-            <a href="#" onclick="return false">
-              <img
-                src="Image_file/main-images/sec-6/goods-4.png"
-                alt="goods-img"
-              />
-            </a>
-            <span>갈색의 장방형 필름코팅정제</span>
-          </div>
+            <div class="goods-box swiper-slide">
+              <span>일반의약품</span>
+              <span>투비원(정)</span>
+              <a href="#" onclick="return false">
+                <img
+                  src="Image_file/main-images/sec-6/goods-4.png"
+                  alt="goods-img"
+                />
+              </a>
+              <span
+                >신경통, 근육통, 관절통 및
+                <br />
+                구각염, 구순염, 설염, 습진, 피부염 등의 증상 완화
+              </span>
+            </div>
 
-          <div class="goods-box">
-            <span>전문의약품</span>
-            <span>뉴글리아시럽</span>
-            <a href="#" onclick="return false">
-              <img
-                src="Image_file/main-images/sec-6/goods-5.png"
-                alt="goods-img"
-              />
-            </a>
-            <span
-              >뇌혈관 결손에 의한 2차 증상 및 변성
-              <br />
-              또는 퇴행성 뇌기질성 정신증후군 개선</span
-            >
+            <div class="goods-box swiper-slide">
+              <span>전문의약품</span>
+              <span>뉴글리아시럽</span>
+              <a href="#" onclick="return false">
+                <img
+                  src="Image_file/main-images/sec-6/goods-5.png"
+                  alt="goods-img"
+                />
+              </a>
+              <span
+                >뇌혈관 결손에 의한 2차 증상 및 변성
+                <br />
+                또는 퇴행성 뇌기질성 정신증후군을 개선</span
+              >
+            </div>
           </div>
         </div>
       </section>
@@ -1043,8 +1053,6 @@
     ></script>
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
-    <!-- Slick Slider -->
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <!-- Swiper JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
