--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
     <link rel="stylesheet" href="style.CSS" />
   </head>
   <body>
+    <div class="loading-page">
+      <div class="logo-box">
+        <img
+          src="Image_file/loading-image/loading-logo.png"
+          alt="loading-logo"
+        />
+      </div>
+    </div>
     <a href="#" class="top-btn"><span>TOP</span></a>
     <header>
       <div class="hd-container">
@@ -318,21 +326,21 @@
             <span
               data-aos="fade-right"
               data-aos-duration="1000"
-              data-aos-delay="200"
+              data-aos-delay="1200"
               data-aos-offset="-1000"
               >열정과 혁신,</span
             >
             <span
               data-aos="fade-right"
               data-aos-duration="1000"
-              data-aos-delay="400"
+              data-aos-delay="1400"
               data-aos-offset="-1000"
               >경험과 기술력이 만나</span
             >
             <span
               data-aos="fade-right"
               data-aos-duration="1000"
-              data-aos-delay="600"
+              data-aos-delay="1600"
               data-aos-offset="-1000"
               >신약의 새로운 내일을 그리다.</span
             >
@@ -343,7 +351,7 @@
             data-aos-offset="-1000"
             data-aos="fade-right"
             data-aos-duration="1000"
-            data-aos-delay="800"
+            data-aos-delay="1800"
           >
             <img
               src="Image_file/main-images/sec-1/text-en-arrow.png"
